--- a/example_app.html
+++ b/example_app.html
@@ -41,16 +41,16 @@
         function example() {
             var url = "https://data.bls.gov/cew/data/api/2018/1/industry/10.csv";
             var el = byId("results");
-            el.innerHTML = "loading...";
+            el.value = "loading...";
             getFile(url,function(responseText) {
-                el.innerHTML = convertToTabTable(responseText);
+                el.value = convertToTabTable(responseText);
             });
         }
 
         function convertToTabTable(csvText) {
             csvText = csvText.replace(/\"/g,"")
             csvText = csvText.replace(/\,/g,"\t\t\t");
-
+            return csvText;
         }
 
     </script>
