--- a/example_app.html
+++ b/example_app.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Example Application</title>
+    <script src="text_tables.js"></script>
     <style>
         #results {
             position: relative;
@@ -43,16 +44,11 @@
             var el = byId("results");
             el.value = "loading...";
             getFile(url,function(responseText) {
-                el.value = convertToTabTable(responseText);
+                TextTables.setTextarea("results",responseText);
             });
         }
 
-        function convertToTabTable(csvText) {
-            csvText = csvText.replace(/\"/g,"")
-            csvText = csvText.replace(/\,/g,"\t\t\t");
-            return csvText;
-        }
-
+        
     </script>
 </head>
 <body>
