--- a/example_app.html
+++ b/example_app.html
@@ -31,7 +31,7 @@
             xhr.open("GET","https://cors-anywhere.herokuapp.com/" + url,true);
             xhr.onreadystatechange = function() {
                 try{
-                    if (xhr.readyState == "4" || xhr.status == "200") {
+                    if (xhr.readyState == "4" && xhr.status == "200") {
                         callback(xhr.responseText);
                     }
                 } catch (er) {}
