--- a/example_app.html
+++ b/example_app.html
@@ -8,9 +8,11 @@
     <script src="text_tables.js"></script>
     <style>
         #results {
-            position: relative;
-            width:600px;
-            height:360px;
+            position: absolute;
+            top:128px;
+            left:16px;
+            right:16px;
+            bottom:16px;
             border:1px solid rgb(128,128,128);
             resize: none;
             outline-color: transparent;
@@ -55,7 +57,7 @@
     <h1>Example Application</h1>
     <hr>
     <button onclick="example()">Run Example</button>
-    
+    <br>
     <textarea id="results"></textarea>
     
 </body>
