--- a/example_app.html
+++ b/example_app.html
@@ -9,16 +9,22 @@
     <style>
         #results {
             position: absolute;
-            top:128px;
-            left:16px;
-            right:16px;
-            bottom:16px;
+            top:0px;
+            left:0px;
+            width:100%;
+            height:100%;
             border:1px solid rgb(128,128,128);
             resize: none;
             outline-color: transparent;
             white-space: nowrap;
         }
-
+        .table-wrapper {
+            position: absolute;
+            top:128px;
+            left:16px;
+            right:16px;
+            bottom:16px;
+        }
 
     </style>
     <script>
@@ -58,7 +64,9 @@
     <hr>
     <button onclick="example()">Run Example</button>
     <br>
-    <textarea id="results"></textarea>
+    <div class="table-wrapper">
+        <textarea id="results"></textarea>
+    </div>
     
 </body>
 </html>
